fix viewport height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ body {
 	font-family: 'Inter', sans-serif;
 	color: #1d2939;
 	overflow-x: hidden;
+	height: 100vh;
+	height: -webkit-fill-available;
 }
 
 /* GENERAL STYLES */
